--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
-}
+/*
 
 ol, ul {
   padding-left: 30px;
 }
+
+
 
 .board-row:after {
   clear: both;
@@ -17,20 +16,7 @@ ol, ul {
   margin-bottom: 10px;
 }
 
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
-}
+
 
 .square:focus {
   outline: none;
@@ -47,4 +33,31 @@ ol, ul {
 
 .game-info {
   margin-left: 20px;
+} */
+
+
+
+
+ body {
+   text-align: center;
+  font-family: "Century Gothic", Futura, sans-serif;
+  box-sizing: border-box;
+}
+
+.board-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+.square {
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  font-size: 4rem;
+
+  /* center p content */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
